tests/miniJava/neg/006735_mutation.MiniJava
class java { public void void Main ( String [ ] java ) { { } } }
